@@ -1,3 +1,6 @@
+2002-07-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* Spellbook_gump.cc: fixed up offsets; fixed NULL shape error
+
 2002-07-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* chunks.cc: worked around compiler bug (gcc 2.96-110) for is_blocked
 
