@@ -1,3 +1,6 @@
+2002-07-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* Spellbook_gump.cc: fixed up offsets; fixed NULL shape error
+
 2002-07-14  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* objs/egg.cc (Egg_object): Fixed bug that was corrupting
